# cngeant

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: agent.cpp  agent.h  comptr.h  cygwin_socket.cpp  cygwin_socket.h  main.cpp  main.manifest  pem.cpp  pem.h  res.rc  resource.h  ssh_pack.cpp  ssh_pack.h  unix_socket.cpp  unix_socket.h  utils.cpp  utils.h  win32_utils.cpp  win32_utils.h
